gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail20000.d
version https://git-lfs.github.com/spec/v1
oid sha256:78d1d2ed08e2e83129b71344c67e63cf8d194a31faf8dbaea317c3693b1e1432
size 2671
